--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: sans-serif;
-  background: rgba(255, 252, 239, 1);
+  background: #E9E6E1;
   min-height: 100vh;
   overflow-x: hidden;
 }
