--- a/web/my-react-app/src/styles/pages/Home.css
+++ b/web/my-react-app/src/styles/pages/Home.css
@@ -30,13 +30,13 @@
 .home-root.theme-light {
   --bg-color: #f5f5f5;
   --text-color: #111111;
-  --overlay-bg: linear-gradient(180deg, #ffffff, #f5f5f5);
+  --overlay-bg: linear-gradient(270deg, #f5f5f5  0%, #f2f2f2  70%, #e5e5e5 100%);
 
   --menu-btn-bg: rgba(0, 0, 0, 0.04);
   --menu-btn-bg-hover: rgba(0, 0, 0, 0.08);
 
   --card-bg: rgba(255, 255, 255, 0.95);
-  --card-border: rgba(0, 0, 0, 0.06);
+  --card-border: rgba(0, 0, 0, 0.3);
 
   --placeholder-bg: rgba(0, 0, 0, 0.03);
   --placeholder-border: rgba(0, 0, 0, 0.08);
@@ -51,7 +51,7 @@
 .home-root.theme-dark {
   --bg-color: #050509;
   --text-color: #f5f5f5;
-  --overlay-bg: linear-gradient(180deg, #141414, #050509);
+  --overlay-bg: linear-gradient(90deg, #141414, #11112e);
 
   --menu-btn-bg: rgba(240, 224, 190, 0.12);
   --menu-btn-bg-hover: rgba(240, 224, 190, 0.25);
@@ -98,31 +98,41 @@
   opacity: 0.9;
 }
 
-/*top 35%*/
+/*top 37%*/
 .home-header {
-  height: 35vh;
+  height: 38vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   padding-bottom: 5vh;
 }
 
-/*bottom 65%*/
+/*bottom 63%*/
 .home-main {
-  height: 65vh;
+  height: 62vh;
   display: grid;
   grid-template-columns: 260px 1fr;
   gap: 2rem;
+
+  padding-bottom: 2rem;
+  box-sizing: border-box;
 }
 
 /* left panel */
 .home-menu {
   display: flex;
   flex-direction: column;
+
+  align-self: start;         
+  padding: 1rem;
+  border-radius: 12px;
+  background: rgba(0,0,0,0.04);  
+  border: 1px solid rgba(0,0,0,0.08);
+  min-height: 50.4vh;
 }
 
 .home-menu-title {
-  font-size: 1.1rem;
+  font-size: 1.rem;
   margin-bottom: 1rem;
 }
 
